tests/NormalTests/paczka1/small_fuzzy/84231756.err
Error in line 1: 7SaSI4 S916 12,1
Error in line 5: 221U S989 57,7
